# luminix

./: .gitignore  Cargo.toml  README.md  build.rs  resources.rc
.github/workflows/: release.yml  rust.yml
resources/: luminix_icon.tga
resources/linux_release/: luminix.desktop
src/: errors.rs  main.rs  register_file_association.rs  settings_window.rs  shader.wgsl  wgpu_renderer.rs
