[package]
name = "luminix"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
winit = { version = "0.30.11", features = ["serde"] }
photon-rs = "0.3.3"
softbuffer = "0.4.6"
bytemuck = "1.23.0"
fraction = "0.15.3"
fast_image_resize = { version = "5.2.0", features = ["image"] }
rayon = "1.10.0"
image = "0.25.6"
egui = { version = "0.32.0", features = ["color-hex"] }
egui-winit = "0.32.0"
wgpu = "25.0.2"  
egui-wgpu = "0.32.0"
pollster = "0.3"
egui-keybind = "0.6.0"
egui_extras = "0.32.0"
serde = "1.0.219"
ron = "0.10.1"

[patch.crates-io]
egui-keybind = { git = "https://github.com/UselessScreen/egui-keybind.git" } # waiting for PR approval: https://github.com/zeozeozeo/egui-keybind/pull/14

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
