[package]
name = "luminix"
version = "0.1.6"
edition = "2021"
build = "build.rs"

[dependencies]
winit = { version = "0.30.11", features = ["serde"] }
bytemuck = "1.23.0"
image = "0.25.8"
egui = { version = "0.33.0", features = ["color-hex"] }
egui-winit = "0.33.0"
egui-wgpu = "0.33.0"
wgpu = "27"
pollster = "0.3"
egui-keybind = "0.8.0"
egui_extras = "0.33.0"
serde = "1.0.219"
ron = "0.11.0"
anyhow = "1.0.98"
strum = { version = "0.27.2", features = ["derive"] }
shell-words = "1.1.0"
thiserror = "2.0.17"
derivative = "2.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[patch.crates-io]
egui-keybind = {git = "https://github.com/UselessScreen/egui-keybind.git", rev = "0b733f4"}

[features]
default = ["egui/callstack"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = "fat"